// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter Attire Filter should match the snapshot if type is attires 1`] = `
<section
  className="filter"
  id="attires"
>
  <select
    onBlur={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "target": Object {
                "size": 1,
              },
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    onChange={[Function]}
    onFocus={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "target": Object {
                "size": 1,
              },
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    value="all attires"
  >
    <option>
      all attires
    </option>
    <option
      key="casual"
    >
      casual
    </option>
  </select>
</section>
`;

exports[`Filter Genres Filter should match the snapshot if type is genres 1`] = `
<section
  className="filter"
  id="genres"
>
  <select
    onBlur={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "target": Object {
                "size": 1,
              },
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    onChange={[Function]}
    onFocus={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "target": Object {
                "size": 1,
              },
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    value="all genres"
  >
    <option>
      all genres
    </option>
    <option
      key="american"
    >
      american
    </option>
  </select>
</section>
`;

exports[`Filter State Filter should match the snapshot if type is genres 1`] = `
<section
  className="filter"
  id="states"
>
  <select
    onBlur={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "target": Object {
                "size": 1,
              },
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    onChange={[Function]}
    onFocus={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "target": Object {
                "size": 1,
              },
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    value="all states"
  >
    <option>
      all states
    </option>
    <option
      key="AK"
    >
      AK
    </option>
    <option
      key="AL"
    >
      AL
    </option>
    <option
      key="AR"
    >
      AR
    </option>
    <option
      key="AS"
    >
      AS
    </option>
    <option
      key="AZ"
    >
      AZ
    </option>
    <option
      key="CA"
    >
      CA
    </option>
    <option
      key="CO"
    >
      CO
    </option>
    <option
      key="CT"
    >
      CT
    </option>
    <option
      key="DC"
    >
      DC
    </option>
    <option
      key="DE"
    >
      DE
    </option>
    <option
      key="FL"
    >
      FL
    </option>
    <option
      key="GA"
    >
      GA
    </option>
    <option
      key="GU"
    >
      GU
    </option>
    <option
      key="HI"
    >
      HI
    </option>
    <option
      key="IA"
    >
      IA
    </option>
    <option
      key="ID"
    >
      ID
    </option>
    <option
      key="IL"
    >
      IL
    </option>
    <option
      key="IN"
    >
      IN
    </option>
    <option
      key="KS"
    >
      KS
    </option>
    <option
      key="KY"
    >
      KY
    </option>
    <option
      key="LA"
    >
      LA
    </option>
    <option
      key="MA"
    >
      MA
    </option>
    <option
      key="MD"
    >
      MD
    </option>
    <option
      key="ME"
    >
      ME
    </option>
    <option
      key="MI"
    >
      MI
    </option>
    <option
      key="MN"
    >
      MN
    </option>
    <option
      key="MO"
    >
      MO
    </option>
    <option
      key="MS"
    >
      MS
    </option>
    <option
      key="MT"
    >
      MT
    </option>
    <option
      key="NC"
    >
      NC
    </option>
    <option
      key="ND"
    >
      ND
    </option>
    <option
      key="NE"
    >
      NE
    </option>
    <option
      key="NH"
    >
      NH
    </option>
    <option
      key="NJ"
    >
      NJ
    </option>
    <option
      key="NM"
    >
      NM
    </option>
    <option
      key="NV"
    >
      NV
    </option>
    <option
      key="NY"
    >
      NY
    </option>
    <option
      key="OH"
    >
      OH
    </option>
    <option
      key="OK"
    >
      OK
    </option>
    <option
      key="OR"
    >
      OR
    </option>
    <option
      key="PA"
    >
      PA
    </option>
    <option
      key="PR"
    >
      PR
    </option>
    <option
      key="RI"
    >
      RI
    </option>
    <option
      key="SC"
    >
      SC
    </option>
    <option
      key="SD"
    >
      SD
    </option>
    <option
      key="TN"
    >
      TN
    </option>
    <option
      key="TX"
    >
      TX
    </option>
    <option
      key="UT"
    >
      UT
    </option>
    <option
      key="VA"
    >
      VA
    </option>
    <option
      key="VI"
    >
      VI
    </option>
    <option
      key="VT"
    >
      VT
    </option>
    <option
      key="WA"
    >
      WA
    </option>
    <option
      key="WI"
    >
      WI
    </option>
    <option
      key="WV"
    >
      WV
    </option>
    <option
      key="WY"
    >
      WY
    </option>
  </select>
</section>
`;
